# learn-electron

./: README.md
addon/: README.md  index.html  package.json  preload.js  todo.txt
addon-cmakejs/: CMakeLists.txt  README.md  index.js  package.json
addon-gyp/: README.md  binding.gyp  index.js  package.json
addon-gyp/cppsrc/: main.cpp
addon/addon/: package.json
addon/addon/src/: CMakeLists.txt  addon.cc
addon/src/: App.js
chart/: README.md  main.js  package.json
chart/src/: App.js
chart/src/component/: LineChart.js  RealTimeChart.js
helloworld/: package.json
notification/: main.js  notification.html  preload.js
notification/src/: App.js
react/: main.js  package.json  preload.js
react-with-addon/: README.md  package.json  preload.js
react-with-addon/addon/: package.json
react-with-addon/addon/src/: CMakeLists.txt  addon.cc
react-with-addon/src/: App.js
react-with-typescript/: main.js  package.json  webpack.config.js
react-with-typescript-CommonJs/: main.js  package.json  preload.js  webpack.config.js
react-with-typescript-CommonJs/src/: App.tsx
react-with-typescript/src/: index.tsx
react/src/: App.js
test-package/: README  package.json  webpack.config.js
test-package/src/: index.js
